--- a/Tarea.ipynb
+++ b/Tarea.ipynb
@@ -140,6 +140,13 @@
    "source": [
     "18. La probabilidad de tener cierta enfermedad en una población es de 0.00148. La prueba de laboratorio para dicha enfermedad tiene una tasa de 93\\% de verdaderos positivos (sale positiva cuando realmente se tiene la enfermedad el 93 \\% de las veces). Y su tasa de verdaderos negativos es de 99 \\% (Sale negativa cuando no se tiene la enfermedad el 99 \\% de las veces). ¿Cuál es la probabilidad de tener la enfermedad dado que la prueba salió positiva? Nota: Recordar el teorema de Bayes P(A | B)P(B) = P(B|A)P(A)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "19. Haz un código que escriba letras y el espacio con la misma frecuencia con que aparecen en el cuento de Alicia en el País de las Maravillas : https://github.com/andergd/separadorSilabas/blob/master/Carroll%2C%20Lewis%20-%20Alicia%20En%20El%20Pa%C3%ADs%20De%20Las%20Maravillas.txt"
+   ]
   }
  ],
  "metadata": {
